--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="style.css" />
         <title>Document</title>
     </head>
@@ -231,21 +235,38 @@
         </section>
         <footer>
             <ul>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
             </ul>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsa, provident animi
